# catflap

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
catflap/: __main__.py  cli.py  stream.py  worker.py
catflap/data/: __init__.py  author.py  message.py  video.py
catflap/proxies/: __init__.py  proxy.py  slack.py  stdout.py
catflap/utils/: config.py  youtube.py
docker/: Dockerfile
tests/: test_catflap.py  test_cli.py  test_stream.py  test_worker.py
tests/data/: test_video.py
